# QtCipherSqlitePlugin_CMake

./: .gitignore  .gitmodules  CMakeLists.txt  QtCipherSqlitePlugin.patch  README.md  cmake_script.py  demo_cmake.txt  main_cmake.txt  sqlitecipher_cmake.txt  test_plugin_cmake.txt
cmake/: qt.cmake  qt_library.cmake
demo/: CMakeLists.txt
demo/include/: test_sqlite3mc.h
demo/source/: main.cpp  test_sqlite3mc.cpp
sqlitecipher/: CMakeLists.txt  smain.cpp  smain.h  sqlitecipher_p.h
sqlitecipher/include/: smain.h  sqlcachedresult_p.h  sqlitecipher_global.h  sqlitecipher_p.h
sqlitecipher/source/: smain.cpp  sqlcachedresult.cpp  sqlitecipher.cpp
test_demo/: CMakeLists.txt
test_demo/source/: main.cpp
test_plugin/: CMakeLists.txt
